--- a/style.css
+++ b/style.css
@@ -26,11 +26,13 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .top__left {
   width: 111px;
-  padding-right: 859px;
   list-style-type: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -41,14 +43,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-item-align: start;
-      align-self: flex-start;
-  padding-top: 18px;
 }
 
 .top__right {
   width: 168px;
-  height: 37px;
   list-style-type: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -59,10 +57,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
-  padding-top: 18px;
-  padding-bottom: 20px;
+}
+
+.top__list {
+  padding: 20px;
 }
 
 .top__info {
