--- a/style.scss
+++ b/style.scss
@@ -24,29 +24,27 @@ body {
 
 .top__bar {
     display: flex;
+    justify-content: space-between;
 }
 
 .top__left {
     width: 111px;
-    padding-right: 859px;
     list-style-type: none;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    align-self: flex-start;
-    padding-top: 18px;
 }
 
 .top__right {
     width: 168px;
-    height: 37px;
     list-style-type: none;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    align-self: flex-end;
-    padding-top: 18px;
-    padding-bottom: 20px;
+}
+
+.top__list {
+    padding: 20px;
 }
 
 .top__info {
