--- a/style.scss
+++ b/style.scss
@@ -80,7 +80,7 @@ body {
     margin-bottom: 24px;
 }
 
-.menu__box {
+.mega__box__menu {
     margin-top: 20px;
 }
 
@@ -587,4 +587,9 @@ body {
 .fa-twitter:hover {
     color: #FFFFFF;
     background-color: #F16D7F;
+}
+
+.catalog__top {
+    background: #F8F3F4;
+    height: 148px;
 }
