--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body {
   margin-bottom: 24px;
 }
 
-.menu__box {
+.mega__box__menu {
   margin-top: 20px;
 }
 
@@ -678,5 +678,10 @@ body {
 .fa-twitter:hover {
   color: #FFFFFF;
   background-color: #F16D7F;
+}
+
+.catalog__top {
+  background: #F8F3F4;
+  height: 148px;
 }
 /*# sourceMappingURL=style.css.map */
