--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-.container {
+.container__stand {
     max-width: 1140px;
     margin: 0 auto;
 }
@@ -19,7 +19,7 @@ body {
 
 .header {
     background-color: #222222;
-    max-height: 75px;
+    height: 75px;
 }
 
 .top__bar {
@@ -32,6 +32,14 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.top__list:first-child {
+    padding-left: 0px;
+}
+
+.top__list:last-child {
+    padding-right: 0px;
 }
 
 .top__right {
@@ -327,6 +335,10 @@ body {
     margin-right: 11px;
 }
 
+.add__cart__text {
+    margin-bottom: 0px;
+}
+
 .add:hover {
     box-shadow: 0 0 10px white;
 }
@@ -450,7 +462,6 @@ body {
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
-    line-height: 167.2%;
     text-align: center;
     color: #222224;
     text-transform: uppercase;
@@ -461,7 +472,6 @@ body {
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
-    line-height: 167.2%;
     text-align: center;
     color: #222224;
 }
@@ -592,4 +602,283 @@ body {
 .catalog__top {
     background: #F8F3F4;
     height: 148px;
+}
+
+.catalog__top__box {
+    display: flex;
+    justify-content: space-between;
+}
+
+.catalog__title {
+    align-self: center;
+    padding-top: 59px;
+    font-family: Lato;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 29px;
+    color: #F16D7F;
+    text-transform: uppercase;
+}
+
+.breadcrumb {
+    padding-top: 65px;
+}
+
+.breadcrumb ul {
+    display: flex;
+}
+
+.breadcrumb li::before {
+    content: "/";
+    margin: 0 8px;
+}
+
+.breadcrumb li:first-child::before {
+    content: " ";
+}
+
+.breadcrumb__list {
+    list-style-type: none;
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    color: #636363;
+    text-transform: uppercase;
+}
+
+.breadcrumb__link {
+    text-decoration: none;
+}
+
+.breadcrumb__link:link,
+.breadcrumb__link:visited {
+    color: #636363;
+}
+
+.breadcrumb__link:hover {
+    color: #F16D7F;
+}
+
+
+.breadcrumb__span {
+    font-weight: bold;
+    color: #F16D7F;
+}
+
+.product__overview {
+    margin-bottom: 80px;
+}
+
+.product__demonstration__box {
+    background: #F7F7F7;
+}
+
+.items__product__photo {
+    display: flex;
+    padding-bottom: 64px;
+    align-items: center;
+}
+
+.product__photo {
+    width: 597px;
+    margin: auto;
+    height: auto;
+    display: block;
+}
+
+.carousel-control-prev-icon {
+    background-image: url(photo/black-arrow-left.svg);
+}
+
+.carousel-control-next-icon {
+    background-image: url(photo/black-arrow-right.svg);
+}
+
+.carousel-control-prev-icon:hover {
+    background-image: url(photo/pink-arrow-left.svg);
+}
+
+.carousel-control-next-icon:hover {
+    background-image: url(photo/pink-arrow-right.svg);
+}
+
+.product__photo__prev,
+.product__photo__next {
+    top: auto;
+    bottom: auto;
+    width: 4%;
+    height: 8%;
+    background: rgba(42, 42, 42, 0.15);
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+
+.product__photo__prev:hover,
+.product__photo__next:hover {
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+
+.items__product__box {
+    background-color: #FFFFFF;
+    border: 1px solid #EAEAEA;
+    padding: 64px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 80px;
+}
+
+.add__item__box {
+    top: 48px;
+    justify-content: center;
+}
+
+.add__item {
+    display: flex;
+    text-decoration: none;
+    color: #F26376;
+    padding: 15px 35px;
+    border: 1px solid #F26376;
+}
+
+.add__item__box:hover {
+    color: #FFFFFF;
+}
+
+.add__item:link,
+.add__item:visited {
+    color: #F26376;
+}
+
+.add__item:hover {
+    background: #F26376;
+    color: white;
+}
+
+.add__item__cart {
+    margin-right: 23px;
+}
+
+.add__item:hover .add__item__cart {
+    display: none;
+}
+
+.add__item__cart__hovered {
+    display: none;
+}
+
+.add__item:hover .add__item__cart__hovered {
+    display: flex;
+    margin-right: 23px;
+}
+
+.items__product__box {
+    margin-top: -64px;
+}
+
+.product__section {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    text-transform: uppercase;
+    padding-bottom: 12px;
+}
+
+.product__section__pink__line {
+    background: #EF5B70;
+    border: none;
+    height: 2px;
+    margin: 0 auto 12px;
+    width: 63px;
+}
+
+.product__brand {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    color: #4D4D4D;
+    text-transform: uppercase;
+    margin-bottom: 48px;
+}
+
+.product__designation {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #5E5E5E;
+    width: 555px;
+    margin-bottom: 32px;
+}
+
+.product__price {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
+    margin-bottom: 65px;
+}
+
+.product__section__grey__line {
+    background: #EAEAEA;
+    border: none;
+    height: 1px;
+    margin: 0 auto 12px;
+    width: 642px;
+}
+
+summary {
+    display: block;
+}
+
+summary::-webkit-details-marker {
+    display: none;
+}
+
+summary::after {
+    content: '\203A';
+    padding-left: 9px;
+    color: #6F6E6E;
+    transform: rotate(90deg);
+}
+
+details[open]>summary::after {
+    content: '\203A';
+    padding-left: 9px;
+    color: #6F6E6E;
+}
+
+.item__product__customization {
+    display: flex;
+    margin-top: 65px;
+    margin-bottom: 48px;
+}
+
+.customization__list {
+    border: 0;
+    outline: 0;
+    margin-right: 23px;
+    text-transform: uppercase;
+    font-family: Lato;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6E6E;
+    width: auto;
+    cursor: pointer;
 }
