--- a/style.css
+++ b/style.css
@@ -3,6 +3,172 @@
   padding: 0;
 }
 
+.product-option {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+details > summary {
+  list-style: none;
+}
+
+details > summary::-webkit-details-marker {
+  display: none;
+}
+
+.filter-product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+.filter-product-details {
+  position: absolute;
+  z-index: 1;
+}
+
+.filter-product-details {
+  padding: 17px;
+  background-color: #FFFFFF;
+}
+
+.filter-product-details[open] {
+  -webkit-box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+          box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+}
+
+.filter-product-summary-span {
+  font-family: Lato;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.filter-product-details[open] .filter-product-summary-span {
+  color: #EF5B70;
+}
+
+.filter-logo {
+  margin-left: 11px;
+}
+
+.filter-product-details[open] .filter-logo {
+  display: none;
+}
+
+.filter-open {
+  display: none;
+}
+
+.filter-product-details[open] .filter-open {
+  display: inline;
+}
+
+.filter-product-summary-in {
+  font-family: Lato;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #EF5B70;
+  text-transform: uppercase;
+  border-left: 5px solid #EF5B70;
+  border-bottom: 1px solid #EBEBEB;
+  padding: 11px 238px 11px 11px;
+  margin-top: 18px;
+}
+
+.filter-product-items {
+  padding: 0;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+
+.filter-product-summary-list {
+  list-style-type: none;
+  padding-left: 16px;
+  margin-bottom: 11px;
+}
+
+.filter-product-summary-link {
+  text-decoration: none;
+  font-family: Lato;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #6F6E6E;
+}
+
+.filter-product-summary-link:hover {
+  color: #EF5B70;
+}
+
+.filter-product-summary-link:link,
+.filter-product-summary-link:visited {
+  color: #6F6E6E;
+}
+
+.sort-product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.sort-product-details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: Lato;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #6F6E6E;
+  text-transform: uppercase;
+  padding-right: 28px;
+}
+
+.sort-product-summary-arrow {
+  margin-left: 10px;
+}
+
+.centring-pagination {
+  text-align: center;
+}
+
+.pagination {
+  border: 1px solid #EBEBEB;
+  padding: 12px 16px;
+  margin-bottom: 96px;
+  display: inline-block;
+}
+
+.pagination__link {
+  text-decoration: none;
+  font-family: Lato;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  color: #C4C4C4;
+  padding-left: 9px;
+  padding-right: 9px;
+}
+
+.pagination__link:visited {
+  color: #C4C4C4;
+}
+
+.pagination__link:hover {
+  color: #EF5B70;
+}
+
 body {
   font-family: 'Lato', sans-serif;
 }
@@ -86,6 +252,7 @@ body {
   top: 67px;
   left: 17px;
   display: none;
+  z-index: 1;
 }
 
 .close__mega__box {
@@ -375,6 +542,11 @@ body {
   border: 1px solid white;
 }
 
+.add:link,
+.add:visited {
+  color: #FFFFFF;
+}
+
 .add__cart {
   margin-right: 11px;
 }
@@ -477,6 +649,8 @@ body {
   background-image: url(photo/background-subscribe.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
+  background-size: cover;
+  background-position: bottom;
 }
 
 .footer__top__box {
@@ -954,50 +1128,5 @@ body {
   height: 1px;
   margin: 0 auto 12px;
   width: 642px;
-}
-
-summary {
-  display: block;
-}
-
-summary::-webkit-details-marker {
-  display: none;
-}
-
-summary::after {
-  content: '\203A';
-  padding-left: 9px;
-  color: #6F6E6E;
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-}
-
-details[open] > summary::after {
-  content: '\203A';
-  padding-left: 9px;
-  color: #6F6E6E;
-}
-
-.item__product__customization {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 65px;
-  margin-bottom: 48px;
-}
-
-.customization__list {
-  border: 0;
-  outline: 0;
-  margin-right: 23px;
-  text-transform: uppercase;
-  font-family: Lato;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 17px;
-  color: #6F6E6E;
-  width: auto;
-  cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
