--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,11 @@
+@import "vars";
+
 * {
     margin: 0;
     padding: 0;
 }
+
+@import "catalog-page-style";
 
 body {
     font-family: 'Lato', sans-serif;
@@ -69,6 +73,7 @@ body {
     top: 67px;
     left: 17px;
     display: none;
+    z-index: 1;
 }
 
 .close__mega__box {
@@ -98,7 +103,7 @@ body {
     font-weight: normal;
     font-size: 14px;
     line-height: 17px;
-    color: #F16D7F;
+    color: $light-pink;
     text-transform: uppercase;
     margin-bottom: 12px;
 }
@@ -117,7 +122,7 @@ body {
 }
 
 .menu__box__link:hover {
-    color: #F16D7F;
+    color: $light-pink;
 }
 
 .top__info {
@@ -136,7 +141,7 @@ body {
 }
 
 .brand__element {
-    background: #F16D7F;
+    background: $light-pink;
     width: 12px;
     height: 92px;
 }
@@ -163,7 +168,7 @@ body {
 }
 
 .pink__elements {
-    color: #F16D7F;
+    color: $light-pink;
 }
 
 .menu {
@@ -331,6 +336,11 @@ body {
     border: 1px solid white;
 }
 
+.add:link,
+.add:visited {
+    color: #FFFFFF;
+}
+
 .add__cart {
     margin-right: 11px;
 }
@@ -357,7 +367,7 @@ body {
     font-weight: normal;
     font-size: 16px;
     line-height: 19px;
-    color: #F26376;
+    color: $darken-pink-button;
     padding: 15px 39px;
     border: 1px solid #FF6A6A;
 }
@@ -417,6 +427,8 @@ body {
     background-image: url(photo/background-subscribe.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
+    background-size: cover;
+    background-position: bottom;
 }
 
 .footer__top__box {
@@ -502,7 +514,7 @@ body {
 .subscribe__button {
     height: 49px;
     padding: 15px;
-    background: #F16D7F;
+    background: $light-pink;
     font-family: Lato;
     font-style: normal;
     font-weight: normal;
@@ -581,22 +593,22 @@ body {
 
 .fa-facebook-f:hover {
     color: #FFFFFF;
-    background-color: #F16D7F;
+    background-color: $light-pink;
 }
 
 .fa-instagram:hover {
     color: #FFFFFF;
-    background-color: #F16D7F;
+    background-color: $light-pink;
 }
 
 .fa-pinterest-p:hover {
     color: #FFFFFF;
-    background-color: #F16D7F;
+    background-color: $light-pink;
 }
 
 .fa-twitter:hover {
     color: #FFFFFF;
-    background-color: #F16D7F;
+    background-color: $light-pink;
 }
 
 .catalog__top {
@@ -617,7 +629,7 @@ body {
     font-weight: normal;
     font-size: 24px;
     line-height: 29px;
-    color: #F16D7F;
+    color: $light-pink;
     text-transform: uppercase;
 }
 
@@ -659,13 +671,13 @@ body {
 }
 
 .breadcrumb__link:hover {
-    color: #F16D7F;
+    color: $light-pink;
 }
 
 
 .breadcrumb__span {
     font-weight: bold;
-    color: #F16D7F;
+    color: $light-pink;
 }
 
 .product__overview {
@@ -740,9 +752,9 @@ body {
 .add__item {
     display: flex;
     text-decoration: none;
-    color: #F26376;
+    color: $darken-pink-button;
     padding: 15px 35px;
-    border: 1px solid #F26376;
+    border: 1px solid $darken-pink-button;
 }
 
 .add__item__box:hover {
@@ -751,11 +763,11 @@ body {
 
 .add__item:link,
 .add__item:visited {
-    color: #F26376;
+    color: $darken-pink-button;
 }
 
 .add__item:hover {
-    background: #F26376;
+    background: $darken-pink-button;
     color: white;
 }
 
@@ -839,46 +851,4 @@ body {
     height: 1px;
     margin: 0 auto 12px;
     width: 642px;
-}
-
-summary {
-    display: block;
-}
-
-summary::-webkit-details-marker {
-    display: none;
-}
-
-summary::after {
-    content: '\203A';
-    padding-left: 9px;
-    color: #6F6E6E;
-    transform: rotate(90deg);
-}
-
-details[open]>summary::after {
-    content: '\203A';
-    padding-left: 9px;
-    color: #6F6E6E;
-}
-
-.item__product__customization {
-    display: flex;
-    margin-top: 65px;
-    margin-bottom: 48px;
-}
-
-.customization__list {
-    border: 0;
-    outline: 0;
-    margin-right: 23px;
-    text-transform: uppercase;
-    font-family: Lato;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
-    color: #6F6E6E;
-    width: auto;
-    cursor: pointer;
 }
