--- a/style.css
+++ b/style.css
@@ -3,17 +3,6 @@
   padding: 0;
 }
 
-.product-option {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 16px;
-  margin-top: 51px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 details > summary {
   list-style: none;
 }
@@ -22,25 +11,41 @@ details > summary::-webkit-details-marker {
   display: none;
 }
 
-.filter-product {
+.product-option {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-top: 35px;
+  margin-bottom: 60px;
+}
+
+.filter-product {
+  width: 360px;
+  position: relative;
 }
 
 .filter-product-details {
+  padding: 13px 16px 16px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: absolute;
   z-index: 1;
+  width: 100%;
 }
 
-.filter-product-details {
-  padding-left: 17px;
+.product__filter__img {
+  margin-left: 11px;
 }
 
 .filter-product-details[open] {
-  padding: 17px;
   background-color: #FFFFFF;
   -webkit-box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
           box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+  position: absolute;
+}
+
+.filter-product-details[open] .product__filter__img path {
+  fill: #EF5B70;
 }
 
 .filter-product-summary-span {
@@ -55,22 +60,6 @@ details > summary::-webkit-details-marker {
 
 .filter-product-details[open] .filter-product-summary-span {
   color: #EF5B70;
-}
-
-.filter-logo {
-  margin-left: 11px;
-}
-
-.filter-product-details[open] .filter-logo {
-  display: none;
-}
-
-.filter-open {
-  display: none;
-}
-
-.filter-product-details[open] .filter-open {
-  display: inline;
 }
 
 .filter-product-summary-in {
@@ -122,7 +111,18 @@ details > summary::-webkit-details-marker {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 304px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 16px;
+}
+
+.sort-product-box {
+  margin-right: 20px;
+}
+
+.sort-product-box:last-child {
+  margin-right: 0px;
 }
 
 .sort-product-details {
@@ -141,6 +141,23 @@ details > summary::-webkit-details-marker {
 
 .sort-product-summary-arrow {
   margin-left: 10px;
+}
+
+.sort-product-summary__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: absolute;
+  z-index: 1;
+  background: #FFF;
+  -webkit-box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+          box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+  padding: 10px;
+  margin-top: 5px;
 }
 
 .centring-pagination {
@@ -454,6 +471,7 @@ body {
   color: #9F9F9F;
   text-align: center;
   margin-top: 6px;
+  margin-bottom: 48px;
 }
 
 .item__card__box {
@@ -462,13 +480,9 @@ body {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-top: 48px;
   padding-bottom: 48px;
 }
 
