--- a/style.scss
+++ b/style.scss
@@ -281,6 +281,7 @@ body {
 
 .item__card__photo {
     vertical-align: bottom;
+    transition: all 0.3s;
 }
 
 .item__card__block {
@@ -317,6 +318,7 @@ body {
 
 .item__card:hover .item__card__photo {
     filter: brightness(50%);
+    transition: all 0.3s;
 }
 
 .add__box {
@@ -333,6 +335,7 @@ body {
     color: #FFFFFF;
     padding: 10px;
     border: 1px solid white;
+    transition: all 0.3s;
 }
 
 .add:link,
@@ -350,10 +353,12 @@ body {
 
 .add:hover {
     box-shadow: 0 0 10px white;
+    transition: all 0.3s;
 }
 
 .item__card:hover .add__box {
     display: flex;
+    transition: all 0.3s;
 }
 
 .button {
@@ -369,11 +374,13 @@ body {
     color: $darken-pink-button;
     padding: 15px 39px;
     border: 1px solid #FF6A6A;
+    transition: all 0.3s;
 }
 
 .featured__items__button:hover {
     background-color: #FF6A6A;
     color: #FFFFFF;
+    transition: all 0.3s;
 }
 
 .advantages {
@@ -526,11 +533,13 @@ body {
     border-top-right-radius: 40px;
     border-bottom-right-radius: 40px;
     display: block;
+    transition: all 0.3s;
 }
 
 .subscribe__button:hover {
     background: #E05C6E;
     cursor: pointer;
+    transition: all 0.3s;
 }
 
 .footer__bottom {
@@ -564,6 +573,7 @@ body {
     padding: 8px 12px;
     color: black;
     background-color: white;
+    transition: all 0.3s;
 }
 
 .fa-instagram {
@@ -572,6 +582,7 @@ body {
     color: black;
     background-color: white;
     margin-left: 7px;
+    transition: all 0.3s;
 }
 
 .fa-pinterest-p {
@@ -580,6 +591,7 @@ body {
     color: black;
     background-color: white;
     margin-left: 7px;
+    transition: all 0.3s;
 }
 
 .fa-twitter {
@@ -588,26 +600,31 @@ body {
     color: black;
     background-color: white;
     margin-left: 7px;
+    transition: all 0.3s;
 }
 
 .fa-facebook-f:hover {
     color: #FFFFFF;
     background-color: $light-pink;
+    transition: all 0.3s;
 }
 
 .fa-instagram:hover {
     color: #FFFFFF;
     background-color: $light-pink;
+    transition: all 0.3s;
 }
 
 .fa-pinterest-p:hover {
     color: #FFFFFF;
     background-color: $light-pink;
+    transition: all 0.3s;
 }
 
 .fa-twitter:hover {
     color: #FFFFFF;
     background-color: $light-pink;
+    transition: all 0.3s;
 }
 
 .catalog__top {
@@ -671,6 +688,7 @@ body {
 
 .breadcrumb__link:hover {
     color: $light-pink;
+    transition: all 0.3s;
 }
 
 
@@ -702,18 +720,22 @@ body {
 
 .carousel-control-prev-icon {
     background-image: url(photo/black-arrow-left.svg);
+    transition: all 0.3s;
 }
 
 .carousel-control-next-icon {
     background-image: url(photo/black-arrow-right.svg);
+    transition: all 0.3s;
 }
 
-.carousel-control-prev-icon:hover {
+.product__photo__prev:hover .carousel-control-prev-icon {
     background-image: url(photo/pink-arrow-left.svg);
+    transition: all 0.3s;
 }
 
-.carousel-control-next-icon:hover {
+.product__photo__next:hover .carousel-control-next-icon {
     background-image: url(photo/pink-arrow-right.svg);
+    transition: all 0.3s;
 }
 
 .product__photo__prev,
@@ -754,20 +776,24 @@ body {
     color: $darken-pink-button;
     padding: 15px 35px;
     border: 1px solid $darken-pink-button;
+    transition: all 0.3s;
 }
 
 .add__item__box:hover {
     color: #FFFFFF;
+    transition: all 0.3s;
 }
 
 .add__item:link,
 .add__item:visited {
     color: $darken-pink-button;
+    transition: all 0.3s;
 }
 
 .add__item:hover {
     background: $darken-pink-button;
     color: white;
+    transition: all 0.3s;
 }
 
 .add__item__cart {
@@ -776,15 +802,18 @@ body {
 
 .add__item:hover .add__item__cart {
     display: none;
+    transition: all 0.3s;
 }
 
 .add__item__cart__hovered {
     display: none;
+    transition: all 0.3s;
 }
 
 .add__item:hover .add__item__cart__hovered {
     display: flex;
     margin-right: 23px;
+    transition: all 0.3s;
 }
 
 .items__product__box {
