--- a/_cart-page-style.scss
+++ b/_cart-page-style.scss
@@ -62,6 +62,12 @@
     padding-bottom: 6px;
 }
 
+.shipping-quantity-span {
+    border: 1px solid #EAEAEA;
+    padding: 0 17px;
+    margin-left: 24px;
+}
+
 .selected-product-item:last-child {
     padding-bottom: 0px;
 }
