--- a/style.scss
+++ b/style.scss
@@ -142,7 +142,7 @@ body {
 .top__brand {
     width: 100%;
     display: flex;
-    padding-left: 63px;
+    padding-left: 6%;
     align-items: center;
 }
 
