--- a/style.css
+++ b/style.css
@@ -1097,7 +1097,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-left: 63px;
+  padding-left: 6%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
